Se agregan media queries

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/navbar.css" />
   <link rel="stylesheet" href="css/home.css" />
-  <link rel="stylesheet" href="css/popular.css" />
-  <link rel="stylesheet" href="css/acclaimed.css" />
   <link rel="stylesheet" href="css/contact.css" />
-  <link rel="stylesheet" href="css/search.css" />
   <link rel="stylesheet" href="css/carousel.css" />
   <link rel="stylesheet" href="css/subscribe.css" />
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/videos.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
 
 
@@ -80,12 +78,12 @@
   <!-- Home Section -->
   <div class="horizontal-padding vertical-padding">
     <section class="home" id="home">
-      <div class="pelicula-principal">
-        <div class="contenedor">
+      <div class="main-movie">
+        <div class="container">
           <h2 class="volanta"> Lo mas visto hoy</h2>
-          <h3 class="titulo"></h3>
-          <p class="descripcion"></p>
-          <button role="button" class="play-button" id="pelicula-principal-play"><i
+          <h3 class="title"></h3>
+          <p class="description"></p>
+          <button role="button" class="play-button" id="main-movie-play"><i
               class="fas fa-play"></i>Reproducir</button>
         </div>
       </div>
@@ -98,7 +96,7 @@
       <h2 class="section-category">Las mas populares...</h2>
       <button class="pre-btn"><img src="img/double-right-arrows.png" alt=""></button>
       <button class="nxt-btn"><img src="img/double-right-arrows.png" alt=""></button>
-      <div class="product-container" id="popular-container">
+      <div class="carousel-container" id="popular-container">
 
       </div>
 
@@ -111,7 +109,7 @@
       <h2 class="section-category">Son tendencia en la última semana...</h2>
       <button class="pre-btn"><img src="img/double-right-arrows.png" alt=""></button>
       <button class="nxt-btn"><img src="img/double-right-arrows.png" alt=""></button>
-      <div class="product-container" id="trending-container">
+      <div class="carousel-container" id="trending-container">
 
       </div>
 
@@ -124,7 +122,7 @@
       <h2 class="section-category">Aclamadas por la crítica...</h2>
       <button class="pre-btn"><img src="img/double-right-arrows.png" alt=""></button>
       <button class="nxt-btn"><img src="img/double-right-arrows.png" alt=""></button>
-      <div class="product-container" id="acclaimed-container">
+      <div class="carousel-container" id="acclaimed-container">
 
       </div>
     </section>
