--- a/index.html
+++ b/index.html
@@ -150,24 +150,23 @@
       <form class="contact-form" id="contact-form" name="contact">
         <div class="form-control">
           <label for="contact-name">Nombre</label>
-          <input  type="text" name="contact-name" id="contact-name" placeholder="Ingrese su nombre"/>
+          <input type="text" name="contact-name" id="contact-name" placeholder="Ingrese su nombre" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
           <label for="contact-email">Email</label>
-          <input   name="contact-email" id="contact-email" placeholder="Ingrese tu email" />
+          <input name="contact-email" id="contact-email" placeholder="Ingrese su email" />
           <small>Error Message</small>
         </div>
         <div class="form-control">
           <label for="contact-message">Mensaje</label>
-          <textarea  name="contact-message" id="contact-message" placeholder="Ingrese el mensaje" rows="6"></textarea>
+          <textarea name="contact-message" id="contact-message" placeholder="Ingrese el mensaje" rows="6"></textarea>
           <small>Error Message</small>
         </div>
         <button type="submit" class="form-submit" id="contact-submit">Enviar</button>
         <div class="submit-message">
           <div class="success" id="contact-submit-success">Hemos recibido tu mensaje! ya estás suscripto!</div>
           <div class="error" id="contact-submit-error">Formulario no enviado</div>
-        </div>
         </div>
       </form>
     </section>
@@ -176,24 +175,24 @@
   <!-- Subscribe Section -->
   <div class="horizontal-padding vertical-padding">
     <section class="subscribe-area" id="subscribe">
-      <div class="container">
+     <!--  <div class="container"> -->
         <div class="subscribe">
           <h4>Todas las novedades</h4>
           <p>Mantenete al tanto de las últimas noticias del mundo del cine.</p>
           <form class="subscribe-form" id="subscribe-form">
             <div class="form-control">
-              <input name="subscribe-email" id="subscribe-email" type="text" placeholder="Ingrese tu email" />
+              <input name="subscribe-email" id="subscribe-email" type="text" placeholder="Ingrese su email" />
               <small>Error Message</small>
               <!-- <input type="submit" value="Suscribite"> -->
               <button type="submit" class="form-submit" id="subscribe-submit">Suscribirse</button>
             </div>
             <div class="submit-message">
               <div class="success" id="subscribe-submit-success">Felicitaciones! ya estás suscripto!</div>
-              <div class="error"   id="subscribe-submit-error">Formulario no enviado</div>
+              <div class="error" id="subscribe-submit-error">Formulario no enviado</div>
             </div>
           </form>
         </div>
-      </div>
+      <!-- </div> -->
     </section>
   </div>
 
@@ -236,6 +235,7 @@
   <script defer src="js/videos.js"></script>
   <script defer src="js/home.js"></script>
   <script defer src="js/popular.js"></script>
+  <script defer src="js/trending.js"></script>
   <script defer src="js/acclaimed.js"></script>
   <script defer src="js/contact.js"></script>
   <script defer src="js/subscribe.js"></script>
